Pawn and bug fixed